# cpp-vcpkg-template

./: .gitignore  CMakeLists.txt  META.json  Makefile  ReadME.md  builder.sh  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.nix/: default.nix  shell.nix
.nix/overlays/: cpp-vcpkg-template-overlay.nix
include/math/: math.h
include/utils/: utils.h
src/: main.cpp
src/math/: math.cpp
src/util/: util.cpp
